--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -14,7 +14,7 @@ containerPort: 80
 ingress:
   host: 4.210.171.228.nip.io   # або інший test-домен
   canary:
-    enabled: false                  # або true, якщо треба
+    enabled: true                  # або true, якщо треба
     weight: 10
 
 resources:
