--- a/helm/templates/ingress.yaml
+++ b/helm/templates/ingress.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: {{ .Chart.Name }}
+  name: {{ include "bestrongapp.ingressName" . }}
   annotations:
     kubernetes.io/ingress.class: nginx
     cert-manager.io/cluster-issuer: "selfsigned-cluster-issuer"
@@ -24,6 +24,6 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: {{ .Chart.Name }}
+                  name: {{ include "bestrongapp.serviceName" . }}
                 port:
                   number: {{ .Values.service.port }}
