--- a/helm/templates/service.yaml
+++ b/helm/templates/service.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Chart.Name }}
+  name: {{ include "bestrongapp.serviceName" . }}
   labels:
-    app: {{ .Values.labels.app }}
+    app: {{ include "bestrongapp.fullname" . }}
     tier: {{ .Values.labels.tier }}
 spec:
   selector:
-    app: {{ .Values.labels.app }}
+    app: {{ include "bestrongapp.fullname" . }}
   ports:
     - port: {{ .Values.service.port }}
       targetPort: {{ .Values.containerPort }}
