--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -32,7 +32,7 @@ stages:
         command: buildAndPush
         repository: $(imageRepository)
         dockerfile: $(dockerfilePath)
-        containerRegistry: 'bestrongaksacr.azurecr.io'
+        containerRegistry: $(dockerRegistryServiceConnection)
         tags: |
           $(tag)
 
