--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -24,7 +24,7 @@ stages:
   - job: Build
     displayName: Build
     pool:
-      name: Default
+      vmImage: 'ubuntu-latest'
     steps:
     - task: Docker@2
       displayName: Build and push an image to container registry
@@ -43,7 +43,7 @@ stages:
   - job: ConfigureHTTPS
     displayName: 'Configure HTTPS'
     pool:
-      name: Default
+      vmImage: 'ubuntu-latest'
     steps:
     - task: AzureCLI@2
       displayName: 'Get AKS Credentials'
@@ -207,7 +207,7 @@ stages:
   jobs:
   - job: DeployHelm
     pool:
-      name: Default
+      vmImage: 'ubuntu-latest'
     variables:
       chartVersion: '1.0.0-$(Build.BuildId)'
       helmChartName: 'bestrongapp'
