--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -10,7 +10,8 @@ resources:
 
 variables:
   # Container registry service connection established during pipeline creation
-  dockerRegistryServiceConnection: 'c89c51fd-76ad-4d67-910b-caf53403c523'
+  azureSubscription: '31b20060-aec1-4e56-b03f-30dba537b067' 
+  dockerRegistryServiceConnection: '702cebc9-1795-4bbc-a39a-9560fb040e49'
   imageRepository: 'yuliakalinka/bestrong'
   containerRegistry: 'bestrongaksacr.azurecr.io'
   dockerfilePath: '$(Build.SourcesDirectory)/Dockerfile'
@@ -48,7 +49,7 @@ stages:
     - task: AzureCLI@2
       displayName: 'Get AKS Credentials'
       inputs:
-        azureSubscription: '95dc02a0-c363-44c9-aa65-8b0ccb897459'
+        azureSubscription: 'bestrong_deploy'
         scriptType: 'bash'
         scriptLocation: 'inlineScript'
         inlineScript: |
@@ -69,7 +70,7 @@ stages:
     - task: AzureCLI@2
       displayName: 'Create Static IP Address in MC_ Resource Group'
       inputs:
-        azureSubscription: '95dc02a0-c363-44c9-aa65-8b0ccb897459'
+        azureSubscription: 'bestrong_deploy'
         scriptType: 'bash'
         scriptLocation: 'inlineScript'
         inlineScript: |
